Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23109

TextEdit.textFormat should default to PlainText

    XMLWordPrintable

Details

    Description

      The default value of the textFormat property is currently AutoText. This can lead to unexpected behaviour when text with HTML tags is assigned to a TextEdit where only plain text is expected and also has performance overhead caused by inspecting the text for tags.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes