Make PlainText the default textFormat of a TextEdit.

With AutoText as the default it's easy to assume that a TextEdit accepts
plain text or rich text only which can lead to unexpected behaviour
when user supplied text is does not have the expected formatting and
implicitly changes the text format.

Task-number: QTBUG-23109
Change-Id: I08900fb23545672fd0e181058633bafeb826a746
Reviewed-by: Martin Jones <martin.jones@nokia.com>